[KARAF-3581] Optimize a bit startup time